# skills

./: .flake8  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
aml-address-screening/: README.md  SKILL.md  __init__.py  requirements.txt  screening.py  setup.py  trustin_api.py
aml-address-screening/examples/: basic_usage.py
aml-address-screening/tests/: test_config.py  test_screening.py
aml-rule-engine/: README.md  SKILL.md  __init__.py  aml_cli.py  requirements.txt
aml-rule-engine/references/dubai/: UAE-001-Law-No-4-2022-Virtual-Assets.md  UAE-002-VARA-Regulations-2023.md  UAE-003-VARA-AML-CFT-Complete-Part3.md  UAE-004-Cabinet-Decision-111-2022.md  UAE-006-VARA-AML-CFT-Controls.md  UAE-007-VARA-Policies-Procedures.md  UAE-008-VARA-Risk-Management.md  UAE-009-VARA-AML-CFT-Complete.md  UAE-010-VARA-Marketing-Regulations-2024.md  UAE-011-CBUAE-VA-VASP-Guidance-2023.md  UAE-012-VARA-Technology-Information-Rulebook.md
aml-rule-engine/references/hongkong/: HK-001-AMLO-Cap-615.md  HK-004-SFC-AML-CFT-Guideline.md  HK-005-SFC-AML-Guideline-AEs-2023.md  HK-006-SFC-VATP-Guidelines-2023.md  HK-007-HKMA-Stablecoin-AML-Guideline-2025.md  HK-008-SFC-VATP-Licensing-Handbook-2023.md  HK-009-SFC-AML-Guideline-LCs-VASPs-2023.md  HK-010-CR-AML-Guideline-TCSPs-2025.md  HK-011-SFC-HKMA-Joint-Circular-VA-2025.md  HK-012-Stablecoins-Ordinance-2025.md
aml-rule-engine/references/singapore/: SG-001-Payment-Services-Act-2019.md  SG-003-FSMA-2022.md  SG-004-MAS-Notice-PSN02-DPT-2025.md  SG-005-MAS-PS-G01-Licensing-Guidelines-2025.md  SG-006-MAS-DTSP-Licensing-Guidelines.md  SG-007-MAS-VA-Risk-Assessment-2024.md  SG-008-MinLaw-AML-CFT-CPF-Resources.md  SG-009-MAS-Notice-PSN02.md  SG-010-DPT-Red-Flag-Indicators.md  SG-011-MAS-Notice-FSM-N27.md  SG-Regulatory-Summary.md
aml-rule-engine/rules/: all_rules.json  hongkong_rules.json  singapore_rules.json
aml-rule-engine/scripts/: demo_cli.py  extract_rules.py  graph_api.py  integration_test.py  rule_engine.py  test_imports.py
docs/: index.md
docs/getting-started/: installation.md  quick-start.md
templates/basic-skill/: SKILL.md
